FTS input field vertical alignment fixed for Opera
git-svn-id: svn+ssh://svn.lablz.com/hosts/trunk/hosts@15057 483a4429-297d-4d5f-a489-5c5d2c303994

--- a/styles/common-template.css
+++ b/styles/common-template.css
@@ -634,9 +634,8 @@ tr.ftSearch td { padding: 0px; }
     font: bold 16px Helvetica;
     border: none;
     padding: 0px 0px 0px 0px;
-    margin-top: 2px;
-    line-height: 21px; 
-    vertical-align: middle;   
+    margin-top: 6px !important;
+    margin-top: 4px;
  }
  
 .ftSearch .action_btn {
